<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RequestedGameInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_upload" />

        <TextView
            android:id="@+id/ivTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ivDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ivPlatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/platform"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ivDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/developer"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ivPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textSize="18sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#ff0000"
                android:text="Delete"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:onClick="btnDeleteRequest"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>