<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical">

<androidx.cardview.widget.CardView
    android:id="@+id/myCardView"
    android:layout_width="wrap_content"
    android:layout_height="370dp"
    android:layout_margin="4dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5.5">

        <ImageView
            android:id="@+id/imgOne"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_upload"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:baselineAligned="false"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/ivTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/game_title"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/ivDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/description"
                    android:textSize="13sp"></TextView>

                <TextView
                    android:id="@+id/ivPlatform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/platform"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/ivDeveloper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textSize="13sp"></TextView>

                <TextView
                    android:id="@+id/ivPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="13sp"></TextView>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>