<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="9dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="180dp"
        android:layout_height="240dp"
        android:layout_margin="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="403dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4.6">

            <ImageView
                android:id="@+id/ps4Img"
                android:layout_width="173dp"
                android:layout_height="225dp"
                android:layout_weight="4"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_upload" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:baselineAligned="false"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="350dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/ivTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/game_title"
                        android:textSize="18sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/ivDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/description"
                        android:textSize="13sp"></TextView>

                    <TextView
                        android:id="@+id/ivPlatform"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/platform"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/ivDeveloper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        android:textSize="13sp"></TextView>

                    <TextView
                        android:id="@+id/ivPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="13sp"></TextView>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>