<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_CustomerPage"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="400dp"
        android:text="@string/CustomerPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />
    <Button
        android:id="@+id/btnGameRequestListPage"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="500dp"
        android:text="@string/game_request_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_upload"
        android:onClick="btnGameRequestPage"
        />

    <TextView
        android:id="@+id/txtAppLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/potato_gaming"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:attr/colorMultiSelectHighlight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/app_logo"
        android:contentDescription="@string/todo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/searchBar"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_below="@+id/txtAppLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/search_bar"
        android:hint="@string/search"
        android:paddingStart="5dp"
        android:textSize="24sp"
        app:drawableRightCompat="@android:drawable/ic_search_category_default" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topSellersRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="290dp" />

    <TextView
        android:id="@+id/topSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/topSeller"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="118dp"
        android:background="@android:color/darker_gray" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="320dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>