<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="300dp"
            android:layout_height="370dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_upload" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/ivTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/ivDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:text="@string/description"
            android:textSize="18sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/ivPlatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:text="@string/platform"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/ivDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:text="@string/developer"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/btnToCart"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/colorAccent"
                android:onClick="btnAddToCart"
                android:text="Add To Cart"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/ivPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="30dp"
                android:text="@string/price"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>